Sorting old posts into series.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,21 +23,16 @@ layout: default
 <div id="nextnav">
 {% if page.tags.size > 0 %}
 
-{%- capture page_tags -%}
     {%- for tag in page.tags -%}
-    		{% assign tag_title = site.data.seriestitles[tag].title | default: tag %}
-        <a href="/series/{{ tag }}">{{ tag_title }}</a>
-        {% unless forloop.last %} &bull; {% endunless %}
+	   		{% assign tag_title = site.data.seriestitles[tag].title | default: tag %}
+    		{% if page.previous_in[tag] %}
+	    		<p>Part of a series on <a href="/series/{{ tag }}">{{ tag_title }}</a>. Next Up: <a href="{{ page.previous_in[tag].url }}">{{ page.previous_in[tag].title }} →</a></p>
+	    	{% else %}
+	    		<p>Latest in the series <a href="/series/{{ tag }}">{{ tag_title }}</a>.
+	    	{% endif %}
     {%- endfor -%} 
-{%- endcapture -%}
-{%- assign tags_list = page_tags | split:',' | sort -%}
 
-<p>Part of the series {{ tags_list }}.</p>
 {% endif %}
-	{% if page.next %}
-		<span id="next">← <a href="{{ page.next.url }}">{{page.next.title }}</a></span>
-    {% endif %} &nbsp;
-    {% if page.previous %}
-	<span id="prev"><a href="{{ page.previous.url }}">{{page.previous.title }}</a> →</span>
-	{% endif %}
+	
+<p>Liked this? <a href="/subscribe">Follow</a> to see what's next. If not, <a href="/contact/">you can send me a note</a>.</p>
 </div>
