--- a/css/main2.css
+++ b/css/main2.css
@@ -89,6 +89,7 @@ img {
 .post img {
   float: right;
   margin: 0px 0px 24px 24px;
+  max-width: 100%
 }
 
 .post img.retinize {
@@ -316,6 +317,13 @@ div.centered p {
     font-size: 18px;
     margin-left: 12px;
   }
+
+  .post img, .post img.side {
+    float: none;
+    margin: 0px;
+    width: 100% !important;
+    max-width: 100%;
+  }
 }
 
 @media (max-width: 1079px) {
@@ -397,8 +405,10 @@ div.centered p {
 #nextnav {
   font-size: 0.8em;
   clear: both;
-  padding-top: 1em;
-  margin-bottom: -1em;
+}
+
+#nextnav:first-child {
+  margin-top: 0;
 }
 
 #prev {
