--- a/css/main2.css
+++ b/css/main2.css
@@ -280,6 +280,12 @@ div.centered p {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  background-color: #F2EDF1;
+  color: #111;
+
+}
+
 @media (max-width: 650px) {
   /* phone */ 
 
