--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,5 +36,5 @@ layout: default
 
 {% endif %}
 	
-<p>Liked this? <a href="/subscribe">Follow</a> to see what's next.</p>
+<p>Liked this? <a href="/subscribe">Follow along</a> to see what's next.</p>
 </div>
