Added apple touch icon.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main2.css">
 
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
         <link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom feed">
         <link rel="alternate" type="application/json" href="/jsonfeed/" tite="JSON Feed" >
 
