--- a/css/main2.css
+++ b/css/main2.css
@@ -236,26 +236,6 @@ div.centered p {
   background-color: #333;
 }
 
-
-
-/* ads */
-
-
-#fusionparent {
-  font-size: 12px;
-  line-height: 1.3;
-}
-
-.carbon-text {
-    color: #999;
-    display:block;
-    line-height: 1.5em;
-}
-
-#carbonads .carbon-poweredby {
-  color: black;
-}
-
 @media (max-width: 500px) {
 
   a.sitename {
@@ -509,4 +489,42 @@ p.meta, span.meta {
   text-align: center;
   opacity: 0.8;
   font-size: 0.8em;
+}
+
+
+@media (prefers-color-scheme: dark) {
+
+  body {
+    background-color: #221e22;
+    color: #eae4e8;
+  }
+
+  h1, h2, h3, h4, h5 {
+    color: #d362e9
+  }
+
+  a:link {
+    color: #d362e9;
+  }
+
+  a:visited {
+    color: #d362e9;
+  }
+
+  h1 a:link, h1 a:visited {
+    color: #d362e9;
+  }
+
+  p.meta, span.meta, .archive li span {
+    color: #aaa1ad;
+  }
+
+  hr, .navigation {
+    border-color: #d362e9;
+  }
+
+  hr.subtle {
+    border-color: #3f3e3f;
+  }
+
 }
