Removed Twitter from footer, RIP

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
                 </ul>
               </div>
 
-              <p class="prologue">© Allen Pike. You can find me <a href="http://www.twitter.com/apike/">on Twitter</a>, <a href="/contact/">contact me</a>, or check out <a href="http://www.steamclock.com/">Steamclock</a>.</p>
+              <p class="prologue">© Allen Pike. 👋🏼 You can <a href="/contact/">contact me</a>, or check out <a href="http://www.steamclock.com/">Steamclock</a>.</p>
 
         </div> <!-- /container -->
     </body>
