Changed inbound links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
                 <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Follow</a>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/follow/">Follow</a>
               </ul>
             </div>
 
@@ -71,7 +71,7 @@
                 <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Follow</a>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/follow/">Follow</a>
                 </ul>
               </div>
 
