--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,8 @@ layout: default
 	<p class='warning'>This an old, sarcastic news post from when I was in college. I apologise.</p>
 {% elsif page.categories.first == "Faith" %}
 	<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
+{% elsif page.date | date: "%Y" | plus: 10 < 'now' | date: "%Y" %}
+	<p class='warning'>This post is over ten years old. Chances are, I've learned enough to have changed my mind about some of the topics herein.</p>
 {% endif %}
 
 <div class="post">
