--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,11 +11,11 @@ layout: default
 <hr class="subtle">
 
 {% if page.categories.last == "Sarcastic News" %}
-	<p class='warning'>This an old, sarcastic news post from when I was in college. I apologise.</p>
+	<p class='warning'>This an ancient satirical news post from when I was in college. I apologise.</p>
 {% elsif page.categories.first == "Faith" %}
 	<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
 {% elsif page.date | date: "%Y" | plus: 10 < 'now' | date: "%Y" %}
-	<p class='warning'>This post is over ten years old. Chances are, I've learned enough to have changed my mind about some of the topics herein.</p>
+	<p class='warning'>This post is over ten years old. Chances are, I've learned enough to have advanced my thinking about some of this stuff.</p>
 {% endif %}
 
 <div class="post">
