--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,15 @@ layout: default
 
 <hr class="subtle">
 
+{% assign current_year = 'now' | date: "%Y" %}
+{% assign post_year = page.date | date: "%Y" %}
+{% assign years_old = current_year | minus: post_year %}
+
 {% if page.categories.last == "Sarcastic News" %}
 	<p class='warning'>This an ancient satirical news post from when I was in college. I apologise.</p>
 {% elsif page.categories.first == "Faith" %}
 	<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
-{% elsif 'now' | date: "%Y" | minus: page.date | date: "%Y" > 10 %}
+{% elsif years_old > 10 %}
 	<p class='warning'>This post is over ten years old. Chances are, I've learned enough to have advanced my thinking about some of this stuff.</p>
 {% endif %}
 
