--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <meta property="og:image" content="{{ site.url }}{{ page.image | defaultshareimg }}" />
         <meta property="og:description" content="{{ page.summary }}" />
         
-        <meta name="twitter:card"         content="summary" />
+        <meta name="twitter:card"         content="summary_large_image" />
         <meta name="twitter:site"         content="@apike" />
         <meta name="twitter:title"        content="{{ page.title }}" />
         <meta name="twitter:description"  content="{{ page.summary }}" />
