--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>{% if page.link %}Link: {% endif %}<a href='{{ page.url }}'>{{ page.title | widow }}</a></h1>
+<h1><a href='{{ page.url }}'>{% if page.link %}Link: {% endif %}{{ page.title | widow }}</a></h1>
 {% if page.summary %}<p class="summary">{{ page.summary }}</p>{% endif %}
 
 <p class="meta">{{ page.date | date: "%B %-d, %Y" }} &bull;
