--- a/css/main2.css
+++ b/css/main2.css
@@ -358,7 +358,7 @@ div.centered p {
   border-left: 2px solid #ff8315;
 }
 
-form.formkit-alert {
+.formkit-alert {
   text-align: center;
   font-size: 24px;
 }
