--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,82 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        {% if page.fulltitle %}
-          <title>{{page.fulltitle}}</title>
-        {% else %}
-          <title>{{ page.title }} - Allen Pike</title>
-        {% endif %}
 
-        {% if page.summary and page.title %}
-        <meta property="og:site_name" content="Allen Pike" />
-        <meta property="og:title" content="{{ page.title }}" />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-        <meta property="og:image" content="{{ site.url }}{{ page.image | defaultshareimg }}" />
-        <meta property="og:description" content="{{ page.summary }}" />
-        
-        <meta name="twitter:card"         content="summary_large_image" />
-        <meta name="twitter:site"         content="@apike" />
-        <meta name="twitter:title"        content="{{ page.title }}" />
-        <meta name="twitter:description"  content="{{ page.summary }}" />
-        <meta name="twitter:image"        content="{{ site.url }}{{ page.image | defaultshareimg }}" />
-        {% endif %}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  {% if page.fulltitle %}
+  <title>{{page.fulltitle}}</title>
+  {% else %}
+  <title>
+    {{ page.title }} - Allen Pike
+  </title>
+  {% endif %}
 
-        <meta name="viewport" content="width=device-width">
+  {% if page.summary and page.title %}
+  <meta property="og:site_name" content="Allen Pike" />
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  <meta property="og:image" content="{{ site.url }}{{ page.image | defaultshareimg }}" />
+  <meta property="og:description" content="{{ page.summary }}" />
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@apike" />
+  <meta name="twitter:title" content="{{ page.title }}" />
+  <meta name="twitter:description" content="{{ page.summary }}" />
+  <meta name="twitter:image" content="{{ site.url }}{{ page.image | defaultshareimg }}" />
+  {% endif %}
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main2.css">
+  <meta name="viewport" content="width=device-width">
 
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/css/syntax.css">
 
-        <link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom feed">
-        <link rel="alternate" type="application/json" href="/jsonfeed/" tite="JSON Feed" >
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/css/main2.css">
 
-        <script src="https://use.typekit.net/yqh6wdu.js"></script>
-        <script>try{Typekit.load({ async: false });}catch(e){}</script>
-        <link rel="author" href="https://plus.google.com/115189793104525758622" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-        <!-- Fathom - cookieless analytics -->
-        <script src="https://cdn.usefathom.com/script.js" data-site="FATFGKEE" defer></script>
-        <!-- / Fathom -->
-    </head>
-    <body>
+  <link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom feed">
+  <link rel="alternate" type="application/json" href="/jsonfeed/" tite="JSON Feed">
 
-        <div class="container">
-          <div class="site">
-            <div class="header navigation">
-              <a class="sitename" href="{{ root_url }}/">Allen Pike</a>
-              <ul>
-                <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
-                <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
-                </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/follow/">Follow</a>
-              </ul>
-            </div>
+  <script src="https://use.typekit.net/yqh6wdu.js"></script>
+  <script>
+    try {
+      Typekit.load({
+        async: false
+      });
+    } catch (e) {}
+  </script>
+  <link rel="author" href="https://plus.google.com/115189793104525758622" />
 
-            <div id="content">
+  <!-- Fathom - cookieless analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-site="FATFGKEE" defer></script>
+  <!-- / Fathom -->
 
-                {{ content }}
+  <link href="https://mastodon.social/@apike" rel="me" title="Mastodon">
+  <link href="https://bsky.app/profile/allenpike.com" rel="me" title="Bluesky">
+  <link href="https://www.linkedin.com/in/allenpike/" rel="me" title="LinkedIn">
+</head>
 
-            </div>
+<body>
 
-              <div class="footer navigation">
-                <a href="{{ root_url }}/" class="sitename">Allen Pike</a>
-                <ul>
-                <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
-                <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
-                </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/follow/">Follow</a>
-                </ul>
-              </div>
+  <div class="container">
+    <div class="site">
+      <div class="header navigation">
+        <a class="sitename" href="{{ root_url }}/">Allen Pike</a>
+        <ul>
+          <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
+          <li {% if page.isMe %} class="active" {% endif %}> <a href="{{ root_url }}/me/">About</a>
+          </li>
+          <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/follow/">Follow</a>
+        </ul>
+      </div>
 
-              <p class="prologue">© Allen Pike. 👋🏼 Feel free to <a href="/contact/">contact me</a>.</p>
+      <div id="content">
+        {{ content }}
 
-        </div> <!-- /container -->
-    </body>
+      </div>
+
+      <div class="footer navigation">
+        <a href="{{ root_url }}/" class="sitename">Allen Pike</a>
+        <ul>
+          <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
+          <li {% if page.isMe %} class="active" {% endif %}> <a href="{{ root_url }}/me/">About</a>
+          </li>
+          <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/follow/">Follow</a>
+        </ul>
+      </div>
+
+      <p class="prologue">© Allen Pike. 👋🏼 Feel free to <a href="/contact/">contact me</a>.</p>
+
+    </div> <!-- /container -->
+</body>
+
 </html>
