--- a/css/main2.css
+++ b/css/main2.css
@@ -104,8 +104,8 @@ ol {
   margin-left: 2em;
 }
 
-.content ul,
-.content ol {
+.content > ul,
+.content > ol {
   margin-top: 1em;
   margin-bottom: 1em;
 }
