--- a/css/main2.css
+++ b/css/main2.css
@@ -104,6 +104,12 @@ ol {
   margin-left: 2em;
 }
 
+.post > ul,
+.post > ol {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 img {
   max-width: 100%;
 }
@@ -207,6 +213,12 @@ div.centered {
   clear: both;
   font-style: italic;
   color: #444;
+}
+
+@media (prefers-color-scheme: dark) {
+  div.centered {
+    color: #ccc;
+  }
 }
 
 div.centered img {
