--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 ---
-<h1><a href='{{ page.url }}'>{% if page.link %}Link: {% endif %}{{ page.title | widow }}</a></h1>
-{% if page.summary %}<p class="summary">{{ page.summary }}</p>{% endif %}
+<h1><a href='{{ page.url }}'>{% if page.link %}Link: {% endif %}
+    {{ page.title | widow }}</a></h1>
+{% if page.summary %}<p class="summary">
+  {{ page.summary }}
+</p>{% endif %}
 
-<p class="meta">{{ page.date | date: "%B %-d, %Y" }} &bull;
-{{ content | reading_time }} read</p>
+<p class="meta">
+  {{ page.date | date: "%B %-d, %Y" }} &bull;
+  {{ content | reading_time }} read
+</p>
 
 <hr class="subtle">
 
@@ -14,32 +19,35 @@ layout: default
 {% assign years_old = current_year | minus: post_year %}
 
 {% if page.categories.last == "Sarcastic News" %}
-	<p class='warning'>This an ancient satirical news post from when I was in college. I apologise.</p>
+<p class='warning'>This an ancient satirical news post from when I was in college. I apologise.</p>
 {% elsif page.categories.first == "Faith" %}
-	<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
+<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
 {% elsif years_old > 10 %}
-	<p class='warning'>This post is over ten years old. Chances are, I've learned enough to have advanced my thinking about some of this stuff.</p>
+<p class='warning'>This post is over ten years old. Chances are, I've learned enough to have advanced my thinking about some of this stuff.</p>
 {% endif %}
 
 <div class="post">
-{{ content }}
+  {{ content }}
 </div>
 
 <hr class="subtle">
 
 <div id="nextnav">
-{% if page.tags.size > 0 %}
+  {% if page.tags.size > 0 %}
 
-    {%- for tag in page.tags -%}
-	   		{% assign tag_title = site.data.seriestitles[tag].title | default: tag %}
-    		{% if page.previous_in[tag] %}
-	    		<p>Next in the <a href="/series/{{ tag }}"><b>{{ tag_title }}</b></a> series: <a href="{{ page.previous_in[tag].url }}">{{ page.previous_in[tag].title }} →</a></p>
-	    	{% else %}
-	    		<p>Latest in the series <a href="/series/{{ tag }}">{{ tag_title }}</a>.
-	    	{% endif %}
-    {%- endfor -%} 
+  {%- for tag in page.tags -%}
+  {% assign tag_title = site.data.seriestitles[tag].title | default: tag %}
+  {% if page.previous_in[tag] %}
+  <p>Next in the <a href="/series/{{ tag }}"><b>
+        {{ tag_title }}</b></a> series: <a href="{{ page.previous_in[tag].url }}">
+      {{ page.previous_in[tag].title }} →</a></p>
+  {% else %}
+  <p>Latest in the series <b><a href="/series/{{ tag }}">
+        {{ tag_title }}</a>.
+      {% endif %}
+      {%- endfor -%}
 
-{% endif %}
-	
-<p>Liked this? <a href="/subscribe">Follow along</a> to see what's next.</p>
+      {% endif %}
+
+      <p>Liked this? <a href="/subscribe">Follow along</a> to see what's next.</p>
 </div>
